# PillAssistant

./: .gitignore  CLOCK_AND_LEGEND_FIXES.md  CLOCK_IMPLEMENTATION.md  CLOCK_VISUALIZATION_GUIDE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_REPORT.md  EDIT_BUTTON_FUNCTIONALITY.md  FINAL_TEST_REPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_MEDICATION_HISTORY.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  MEDICATION_HISTORY_EDITING.md  NEW_FEATURES_GUIDE.md  QUICKSTART.md  README.md  STATISTICS_VIEW_FEATURES.md  TESTING.md  TESTING_REPORT.md  TESTING_SETUP.md  TEST_INVENTORY.md  TEST_SUMMARY.md  TEXT_OVERFLOW_FEATURES.md  UI_CHANGES.md  UI_CLOCK_CHANGES.md  WORK_COMPLETED.md  fcntl.py  hacs.json  pyproject.toml  requirements-dev.txt  requirements_test.txt  resource.py  setup.cfg
changes/: fix-notifications-reshuffle.patch
examples/: AUTOMATIONS.md  configuration.yaml
scripts/: install-test-deps.ps1
tests/: conftest.py  test_advanced_scheduling.py  test_automatic_notifications.py  test_clock_visualization.py  test_clock_yesterday_toggle.py  test_config_flow.py  test_device_info.py  test_dosage_adjustment.py  test_dosage_display_formatting.py  test_dosage_unit_normalization.py  test_edit_medication_navigation.py  test_entity_name_formatting.py  test_frontend_features.py  test_init.py  test_legend_and_context.py  test_medication_history.py  test_medication_pluralization.py  test_medication_types.py  test_missed_doses.py  test_notification_actions.py  test_notification_end_to_end.py  test_notifications.py  (+16 more)
(+14 files in other folders)
